# claude-wrap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: filter-manager.md
claude_wrap/: __init__.py  core.py  main.py
claude_wrap/plugins/: __init__.py  kitty.py
commands/: filter-add.md  filter-list.md  filter-test.md
hooks/: hooks.json
