[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-wrap"
version = "0.1.0"
description = "PTY wrapper for Claude Code CLI — filters Kitty Keyboard Protocol sequences that break IME input (Korean, Japanese, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude", "claude-code", "ime", "korean", "kitty", "terminal", "pty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.scripts]
claude-wrap = "claude_wrap.main:main"

[project.urls]
Homepage = "https://github.com/RabbitHZ/claude-wrap"
Issues = "https://github.com/RabbitHZ/claude-wrap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_wrap*"]
